src/assets/scss/components/_search.scss
.search {

  $height: 30px;
  $font-size: 36px;
  $icon-size: 28px;

  $height-tablet: 50px;
  $font-size-tablet: 60px;
  $icon-size-tablet: 44px;

  $height-desktop: 75px;
  $font-size-desktop: 90px;
  $icon-size-desktop: 61px;

  position: relative;
  height: 100vh;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  background: $blu;

  .search-form {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    max-width: 90%;
    margin-bottom: 140px;

    .input {
      display: none;
    }

    .editable-div {
      text-align: right;
      border: none;
      font-size: $font-size;
      text-transform: uppercase;
      font-family: $Futura;
      display: inline-block;
      line-height: 1.1;
      white-space: nowrap;
      overflow: hidden;
      outline: 0;
      color: $offWhite;

      &:before {
        content: "SEARCH";
        color: $offWhite;
        cursor: text;
      }
    }

    .editable-div:not(:empty):before {
      display: none;
    }

    .submit {
      border: none;
      background: transparent;
      width: auto;
      margin-left: 10px;
      outline: 0;
      height: $icon-size;
      width: $icon-size + 1px;
      padding: 0;

      svg {
        width: $icon-size;
        height: $icon-size;
        fill: $offWhite;
      }
    }

    @include susy-breakpoint($bp-medium, $susy) {
      .editable-div {
        font-size: $font-size-tablet;
      }
      .submit {
        height: $icon-size-tablet;
        width: $icon-size-tablet + 1px;
        svg {
          height: $icon-size-tablet;
          width: $icon-size-tablet;
        }
      }
    }
    @include susy-breakpoint($bp-large, $susy) {
      .editable-div {
        font-size: $font-size-desktop;
      }
      .submit {
        height: $icon-size-desktop;
        width: $icon-size-desktop + 1px;
        svg {
          height: $icon-size-desktop;
          width: $icon-size-desktop;
        }
      }
    }
  }
}

